syntax = "proto3";
package tendermint.store;

option go_package = "github.com/cometbft/cometbft/proto/tendermint/store";

message BlockStoreState {
  int64 base   = 1;
  int64 height = 2;
}

// TxInfo describes the location of a tx inside a committed block
// as well as the result of executing the transaction and the error log output.
message TxInfo {
  int64  height = 1;
  uint32 index  = 2;
  // The response code of executing the tx. 0 means
  // successfully executed, all others are error codes.
  uint32 code = 3;
  // The error log output generated if the transaction execution fails.
  string error = 4;
  // The error namespace/module
  string codespace = 5;
  // Requested gas limit
  int64 gas_wanted = 6;
  // Actual gas consumed
  int64 gas_used = 7;
  repeated string signers = 8; // tx signers
}
